# simple-artnet-controller

./: .gitignore  .gitmodules  CMakeLists.txt  install-3rdparty.sh
data/: fixtures.json
fakeroot/lib/: libOSC++.la  libartnet.1.dylib  libartnet.dylib  libartnet.la
fakeroot/lib/pkgconfig/: libartnet.pc
include/: artnet.hpp  faders.hpp  fadershttp.hpp  fadersmidi.hpp  fadersosc.hpp  fixture.hpp  fixturemanager.hpp  fixturemanagerhttp.hpp  helpers.hpp  httpserver.hpp  httpstatic.hpp  httpstaticfiles.hpp  incbin.h  jsoncache.hpp  midi.hpp  osc.hpp  oschandler.hpp  oscvalueunpack.hpp  scene.hpp  scenemanager.hpp  settings.hpp  types.hpp  typesjson.hpp  valueinfo.hpp
resources/: package-lock.json  package.json  tsconfig.json
resources/src/: axioshelpers.ts  bucket.ts  fixturecell.ts  fixturecreater.ts  fixtures.ts  grid.ts  helpers.ts  index.ts  jogdial.ts  sliders.ts  state.ts  subscriber.ts  svg.ts  valueinfo.ts
resources/static/: index.html  site.js  site.js.map
src/: CMakeLists.txt  artnet.cpp  faders.cpp  fadershttp.cpp  fadersmidi.cpp  fadersosc.cpp  fixture.cpp  fixturemanager.cpp  fixturemanagerhttp.cpp  httpserver.cpp  httpstatic.cpp  httpstaticfiles.cpp  jsoncache.cpp  main.cpp  midi.cpp  osc.cpp  osc.hpp  oscvalueunpack.hpp  scene.cpp  scenemanager.cpp  settings.cpp  valueinfo.hpp
